Fix modal_is-opened visibility

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -15,7 +15,7 @@
 }
 
 .modal_is-opened {
-  visibility: hidden;
+  visibility: visible;
 }
 
 .modal__container {
